--- a/package.json
+++ b/package.json
@@ -10,10 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@rainbow-me/rainbowkit": "^2.2.8",
+    "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.12",
+    "axios": "^1.11.0",
+    "lucide-react": "^0.542.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "tailwindcss": "^4.1.12"
+    "react-redux": "^9.2.0",
+    "recharts": "^3.1.2",
+    "tailwindcss": "^4.1.12",
+    "viem": "^2.36.0",
+    "wagmi": "^2.16.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
